feat (Ladder) : Ladder 클래스에 getAddGapLine 메서드 추가